# W5-SPARK

./: README.md  explore-meteosuisse.ipynb  pyproject.toml  spark-tutorial.ipynb
customers_summary.parquet/: .part-00000-5573523f-12bb-405f-89d8-024efd00611e-c000.snappy.parquet.crc  part-00000-5573523f-12bb-405f-89d8-024efd00611e-c000.snappy.parquet
