[tool.poetry]
name = "302-course"
version = "0.1.0"
description = "Project for 302 module"
authors = ["Gregory Mermoud"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10, <3.11"
numpy = "<2.0"
ipykernel = "^6.29.5"
pyarrow = "^12.0.0"
pyspark = "3.5.2"
pandas = "^2.0.3"
plotly = "^5.24.0"
nbformat = "^5.10.4"
altair = {extras = ["pandas"], version = "^5.4.1"}
jupyter-black = "^0.4.0"
findspark = "^2.0.1"
grpcio = "^1.66.1"
grpcio-tools = "^1.66.1"
grpcio-status = "^1.66.1"
s3fs = "^2024.9.0"
polars = "^1.7.1"
matplotlib = "^3.9.2"
duckdb = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
